<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:id="@+id/layout_seed_input">


    <MultiAutoCompleteTextView
        android:id="@+id/text_seed_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:dropDownAnchor="@+id/button"
        android:dropDownHeight="200dp"
        android:hint="@string/text_seed"
        android:inputType="textVisiblePassword|textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="createWalletFromSeed"
        android:text="@string/button_create"
        android:textAlignment="textStart"
        android:theme="@style/Button.Off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_restore_height"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/text_restore_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_restore_height"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_seed_input" />
</androidx.constraintlayout.widget.ConstraintLayout>